--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 gym~=0.18.3
-tensorflow==2.5.0
-tensorflow_probability==0.13.0
 pandas==1.2.5
 matplotlib~=3.4.3
 numpy~=1.19.5
 stable-baselines3
-git+git://github.com/micheltokic/marioai/#subdirectory=gym-marioai
 git+git://github.com/angelolovatto/gym-cartpole-swingup
 dill~=0.3.4
+tqdm~=4.62.2
+gpytorch~=1.5.1
+torch~=1.9.0+cpu
+scikit-learn~=0.24.2
