--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,5 @@
 tasks:
   - init: pip3 install -r requirements.txt
-    command: python3 main.py
+    command: |
+      cd src/
+      python3 main.py
