Update gitpod yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,8 +7,9 @@ ports:
     onOpen: ignore
 tasks:
   - init: pip3 install -r requirements.txt
-    command: >
-      python3 src/main.py 
+    command: |
+      cd src/
+      python3 main.py 
 vscode:
   extensions:
     - ms-python.python
